<resources>
    <string name="app_name">MaiMai</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_StudentID">学号</string>
    <string name="prompt_password">密码(信息门户密码)</string>
    <string name="action_sign_in">登入信息门户</string>
    <string name="prompt_realName">实名注册</string>
    <string name="test_accounts">测试账号20162434</string>
    <string name="test_password">测试密码970614</string>
    <string name="test_login_StudentID">20162434</string>
    <string name="test_login_password">000000</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    //
    <string name="login_tip">请输入学号、密码和验证码：</string>
    <string name="login_id">学号</string>
    <string name="login_password">密码</string>
    <string name="login_code">验证码</string>
    <string name="login_submit">登录</string>
    <string name="codeTip">点击左侧更新验证码~</string>
    <string name="remember_pas_switch">记住密码</string>
    //丽姐
    <string name="title_activity_context">ContextActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">WIFI</string>
    <string name="title_notifications">Private</string>

    <string name="name">MaiMai</string>
    <string name="info">属于你的小天地</string>

    <string name="book">书</string>
    <string name="wifi">WIFI公社</string>
    <string name="person_info">个人信息</string>
    <string name="set">设置</string>
    <string name="about">关于</string>

    <string name="scan_code">打开相机</string>

    <string name="member">公社成员:0</string>
    <string name="energy">公社能量:0</string>
    <string name="contribute">我已贡献:0</string>
    <string name="get">我已回报:0</string>

    <string name="join">加入公社</string>
    <string name="isMember">您已是公社成员！</string>
    <string name="noMember">您不是公社成员！</string>
    <string name="net_speed">WiFi 状态:</string>
    <string name="net_power">WiFi 强度:</string>

    <string name="save_book"> 节约书本</string>
    <string name="contribute_book"> 贡献书本</string>
    <string name="send_object">待发货</string>
    <string name="receiver_object">&#160;&#160;待收货</string>
    <string name="text_contribute">&#160;&#160;&#160;&#160;书籍发布</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--WIFI-->
    <string name="waiting_for_wifi_signal_level">强度未确定&#8230;</string>
    <string name="wifi_state">WiFi 状态:</string>
    <string name="wifi_signal_level">WiFi 强度:</string>
    <string name="available_access_points">本地WIFI列表:</string>

    <string name="requesting_location_access">请求本地连接</string>
    <string name="do_you_want_to_open_location_settings">你想打开位置设置启用位置服务？没有WiFi接入点不会被发现。</string>


</resources>
