<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:id="@+id/frag3Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/jieyue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_book"
            android:background="@null"
            android:clickable="false"/>
        <Button
            android:id="@+id/gongxiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contribute_book"
            android:background="@null"
            android:clickable="false"/>

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@drawable/send_object"
            android:text="@string/send_object" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_object"
            android:background="@null"
            android:id="@+id/receiver"
            android:drawableLeft="@drawable/receiver_object"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_contribute"
            android:background="@null"
            android:id="@+id/contribute"
            android:drawableLeft="@drawable/contribute"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/floatBtn"
        android:src="@drawable/reset_account"/>
</LinearLayout>