<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="316dp"
        android:orientation="horizontal"
        android:layout_weight="0.37">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/join"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonWifi"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="WIFI"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/wifi_black"
                android:id="@+id/wifiBlack"
                android:layout_weight="5"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/noMember" />

            <TextView
                android:id="@+id/wifi_state_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/net_speed" />

            <TextView
                android:id="@+id/wifi_signal_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_power" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <TableRow android:paddingTop="0dp">

            <TextView
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/member" />

            <TextView
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/energy" />
        </TableRow>

        <TableRow android:paddingTop="40dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contribute" />

            <TextView
                android:layout_marginRight="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/get" />
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatBtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/reset1" />

</LinearLayout>