<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.maimai.zz.maimai.WIFisActivity">

    <TextView
        android:id="@+id/wifi_signal_level_label"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/wifi_signal_level"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/wifi_signal_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_signal_level_label"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/waiting_for_wifi_signal_level"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/wifi_state_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_signal_level"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/wifi_state"
        android:textAppearance="@android:style/TextAppearance.Medium"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/access_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_state_change"
        android:paddingBottom="@dimen/text_view_padding"
        android:paddingTop="@dimen/text_view_padding"
        android:text="@string/available_access_points"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <ListView
        android:id="@+id/access_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/access_points_label"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="261dp" />

</LinearLayout>
